<resources>
    <string name="app_name">internest</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_share">Share</string>
    <string name="share_link">https://play.google.com/store/apps/details?id=android.internest.com.internest</string>
    <string name="share_text">Share app to..</string>
    <string name="menu_points">Points Promo</string>
    <string name="menu_contact">Contact Us</string>
    <string name="list_empty">There are no items for now</string>

    <!-- Start of Fragment Names -->
    <string name="blog_fragment_text">TRACKER</string>
    <string name="scan_fragment_text">SCAN</string>
    <string name="make_code_fragment_text">GENERATE</string>
    <string name="trending_fragment_text">TRENDING</string>
    <!-- End of Fragment Names -->

    <!-- Start of Blog Fragment Literature -->
    <string name="blog_thumb_desc">Post Thumbnail</string>
    <!-- End of Blog Fragment Literature -->

    <!-- Start of Scan Fragment Literature -->
    <string name="scanner_prompt_text">Scan QR Code</string>
    <string name="code_contents">Contents: </string>
    <string name="code_format">\nFormat: </string>
    <string name="empty_scan">Nothing to display</string>
    <!-- End of Scan Fragment Literature -->

    <!-- Start of MakeCode Fragment Literature -->
    <string name="generate_here">Create your own codes for your Promos, websites and CVs</string>
    <string-array name="content_types_array">
        <item>URL</item>
        <item>Text</item>
    </string-array>
    <string name="url_content_type">URL</string>
    <string name="text_content_type">Text</string>
    <string name="choose_content_text">Choose Content Type</string>
    <string name="enter_content_text">Enter Content to be Encoded</string>
    <string name="url_placeholder_text">http://</string>
    <string name="text_placeholder_text">Enter text here</string>
    <string name="make_code_button_text">Generate QR Code</string>
    <string name="submit_error">You must enter some content in order to generate a QR code</string>
    <string name="get_points">You need to get more points\nVisit the Points Promo page for more info</string>
    <!-- End of MakeCode Fragment Literature -->

    <!-- Start of YourQRCode Activity Literature -->
    <string name="title_activity_your_qrcode">Your QR Code</string>
    <string name="qr_code_description">Your QR Code</string>
    <string name="save_code_button_text">Save QR Code</string>
    <string name="saved_image_title_prepend">internest-scan-</string>
    <string name="saved_image_description">INTERNEST SCAN IMAGE</string>
    <string name="saved_image_format">.png</string>
    <string name="saved_image_directory">Internest Images</string>
    <string name="save_success">Image saved successfully</string>
    <string name="filenotfound_error">File not found. Please try again.</string>
    <string name="io_error">There was an error. Please try again.</string>
    <!-- End of Your QRCode Activity Literature -->

    <!-- Start of ScanCode Activity Literature -->
    <string name="title_activity_scan_code">Scan QR Code</string>
    <string name="no_user">Go to Points Promo page to sign up and start accumulating points!</string>
    <string name="scan_added">Item added to remote database</string>
    <string name="serverconn_error">Couldn\'t update server</string>
    <!-- End of ScanCode Activity Literature -->

    <!-- Start of CaptureActivityPortrait Activity Literature -->
    <string name="title_activity_capture_activity_portrait">CaptureActivityPortrait</string>
    <!-- End of CaptureActivityPortrait Activity Literature -->

    <!-- Start of URLDisplay Activity Literature -->
    <string name="title_activity_urldisplay">Internest</string>
    <!-- End of URLDisplay Activity Literature -->

    <!-- Start of TextDisplay Activity Literature -->
    <string name="title_activity_text_display">Internest</string>
    <string name="text_announcer">The text embedded in the code is:</string>
    <!-- End of TextDisplay Activity Literature -->

    <!-- Start of History Activity Literature -->
    <string name="title_activity_history">History</string>
    <string name="scanned_icon_desc">Type of item scanned</string>
    <string name="scanned_type_text">text</string>
    <string name="scanned_type_url">url</string>
    <string name="url_simple">web link</string>
    <string name="delete_title">Delete</string>
    <string name="delete_warning">Are you sure you want to delete this item?</string>
    <string name="delete_ok">Yes</string>
    <string name="delete_cancel">Cancel</string>
    <!-- End of History Activity Literature -->

    <!-- Start of Contact Us Activity Literature -->
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="contact_here">Contact us using the links below:</string>
    <string name="facebook_desc">Facebook icon</string>
    <string name="twitter_desc">Twitter icon</string>
    <string name="web_desc">Web icon</string>
    <!-- End of Contact Us Activity Literature -->

    <!-- Start of Points Promo Activity Literature -->
    <string name="title_activity_points_promo">Points Promo</string>
    <!-- End of Points Promo Activity Literature -->

    <!-- Start of SignUp Activity Literature -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="num_label">Phone Number:</string>
    <string name="num_hint">Enter phone number here</string>
    <string name="num_incorrect">Enter a valid phone number</string>
    <string name="dob_label">Date of Birth:</string>
    <string name="dob_hint">Enter date of birth here</string>
    <string name="dob_incorrect">Enter a valid date</string>
    <string name="gender_label">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="gender_error">You must choose at least one gender</string>
    <string name="create_account">Create Account</string>
    <string name="user_created">Account created</string>
    <string name="user_not_created">The account could not be created. Please try again later</string>
    <string name="not_connected">Connect to a network to proceed</string>
    <!-- End of SignUp Activity Literature -->
</resources>
