<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.internest.com.internest.SignUp"
    tools:showIn="@layout/activity_sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/num_label"
                android:id="@+id/numText"
                android:labelFor="@+id/numInput"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|textEmailAddress"
                android:ems="10"
                android:id="@+id/numInput"
                android:hint="@string/num_hint"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorPrimaryLight"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dob_label"
                android:id="@+id/dobText"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/dobInput"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dobInput"
                android:hint="@string/dob_hint"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender_label"
                android:id="@+id/genderText"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:id="@+id/maleGender"
                    android:textColor="@color/colorBlack"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"
                    android:id="@+id/femaleGender"
                    android:textColor="@color/colorBlack"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_other"
                    android:id="@+id/otherGender"
                    android:textColor="@color/colorBlack"
                    android:onClick="radioButtonClicked" />
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:id="@+id/createAccount"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:onClick="onClickCreate" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>