<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MakeCode">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:text="@string/generate_here"
                android:id="@+id/generateHere" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorGray"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/choose_content_text"
                android:id="@+id/chooseContent"
                android:layout_below="@+id/generateHere"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:layout_marginTop="0dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:popupBackground="@color/colorPrimary"
                android:layout_below="@+id/chooseContent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:dropDownSelector="@color/colorPrimary"
                android:dropDownWidth="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorGray"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enter_content_text"
                android:id="@+id/enterContent"
                android:layout_below="@+id/spinner"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/contents"
                android:background="@drawable/rectangular_shape"
                android:textColor="@color/colorBlack"
                android:layout_below="@+id/enterContent"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_alignRight="@+id/contents"
                android:layout_alignEnd="@+id/contents"
                android:layout_alignLeft="@+id/contents"
                android:layout_alignStart="@+id/contents"
                android:text="@string/make_code_button_text"
                android:id="@+id/makeCodeButton"
                android:layout_below="@+id/contents"
                android:textColor="@color/colorTextPrimary"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:layout_marginTop="30dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>